--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@analytics/google-analytics": "^0.3.1",
-    "analytics": "^0.3.5",
-    "faunadb": "^2.13.1",
+    "@analytics/google-analytics": "^0.5.2",
+    "analytics": "^0.6.7",
+    "faunadb": "^4.0.0",
     "markdown-magic": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "bootstrap": "netlify dev:exec node ./scripts/bootstrap-fauna-database.js",
     "docs": "md-magic --path '**/*.md' --ignore 'node_modules'",
-    "start": "netlify dev",
-    "prebuild": "echo 'setup faunaDB' && npm run bootstrap",
+    "start": "react-scripts start",
+    "prebuild": "tsc --noEmit functions/**/*.ts",
     "build": "react-scripts build"
   },
   "devDependencies": {
-    "netlify-cli": "^2.19.0"
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-object-assign": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/aws-lambda": "^8.10.71",
+    "@types/node": "^14.14.22",
+    "netlify-cli": "^3.4.2",
+    "typescript": "^4.1.3"
   },
   "browserslist": [
     ">0.2%",
